Описание функции load_graph из wave_find_path (libsc).

--- a/chap1.tex
+++ b/chap1.tex
@@ -1,7 +1,9 @@
 
 \chapter{Разработка программы решения теоретико-графовой задачи}
+\label{cha:Cppalgo}
 
 \section{Задание}
+\label{sec:Cppalgo_task}
 
 При выполнении этого этапа расчетной работы студенту необходимо
 разработать и реализовать программу на С/С++, которая решает выданную
