исправление в части 3 (демо алгоритма) шага про добавления посещения начальной и конечной вершин в маршрут

--- a/chap3.tex
+++ b/chap3.tex
@@ -247,13 +247,12 @@ sc-конструкция не является корректной в сема
 \end{algostep}
 
 
-\begin{algostep}{Добавление в структуру пути посещения начальной и
-    конечной вершины генерируемого пути (Шаг
-    8)}{S9_Add_begin_and_end_vertexes_visit_to_route_tuple}{0.7}
+\begin{algostep}{Добавление в структуру пути посещения конечной
+    вершины генерируемого пути (Шаг
+    8)}{S9_Add_end_vertex_visit_to_route_tuple}{0.7}
  
-  Добавим в структуру генерируемого пути посещения начальной вершины
-  $A$ и конечной вершины $F$. Созданные посещения получат в качестве
-  значения переменные \vidtf{beg\_vertex\_visit} и
+  Добавим в структуру генерируемого пути посещение конечной вершины
+  $F$. Созданное посещение получит в качестве значения переменная
   \vidtf{end\_vertex\_visit}.
 \end{algostep}
 
