chap2 полностью приведена в порядок

--- a/main.tex
+++ b/main.tex
@@ -51,6 +51,8 @@
 \newcommand{\attr}[1]{\idtf{#1\_}}
 \newcommand{\rel}[1]{\idtf{#1*}}
 
+\newcommand{\ostisgtlink}{\href{http://ostisgraphstheo.sourceforge.net}{OSTIS GT}}
+
 \bibliographystyle{unsrt}
 
 \begin{document}
